fixed teaser text alignment

--- a/src/operun/frontpage/browser/static/frontpage-compiled.css
+++ b/src/operun/frontpage/browser/static/frontpage-compiled.css
@@ -34,9 +34,9 @@ body#visual-portal-wrapper.pat-plone .outer-wrapper .contenttype-teaser::before 
 }
 .teaser-text {
   position: absolute;
-  right: 5%;
-  bottom: 33.333%;
-  left: 5%;
+  right: 25px;
+  bottom: 5.333%;
+  left: 25px;
   color: #fff;
 }
 .teaser-image img {
@@ -49,7 +49,7 @@ body#visual-portal-wrapper.pat-plone .outer-wrapper .contenttype-teaser::before 
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 33.333%;
+  height: 23.333%;
   opacity: .5;
   background-color: #000000;
 }
